# claudeagent-multiagent-latest

./: .gitignore  13_need_to_update_testing_system.md  3-Comprehensive_Enhanced_Report_Military_Actions_Russia-Ukraine_War_Systematic_Editorial_Revision.md  4-Final-Summary-Space-Exploration-Recent-Developments.md  AGENTS.md  AGENT_BASED_RESEARCH_PLAN.md  API_DOCUMENTATION.md  Appendix-Editorial_Review_Russia-Ukraine_War_Military_Actions_Report.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_29b302e0-3ab6-4396-bcf3-b3c29e2bb3e7.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_7759a098.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_Final.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_Final_Complete.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_df9c82af.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_e67c5204.md  Appendix-Report_Generation_Summary_Russia-Ukraine_War_Research_Session_eebdc583-6d13-47ce-b567-6af22d41279a.md  CLAUDE.md  CONTENT_CLEANING_FIX_SUMMARY.md  DEMONSTRATION_INTEGRATION_WORKING.py  EDITORIAL_OUTPUTS_FIX_SUMMARY.md  EXCLUDED_SITES_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN_SALIENT_POINTS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOLS_INTEGRATION_ANALYSIS.md  MULTI_AGENT_SYSTEM_ARCHITECTURE_DOCUMENTATION.md  MULTI_AGENT_WORKFLOW_IMPLEMENTATION.md  OPTIMAL_WORKFLOW_DESCRIPTION.md  PHASE_1_2_IMPLEMENTATION_SUMMARY.md  PHASE_1_3_IMPLEMENTATION_SUMMARY.md  PHASE_2_3_COMPLETION_SUMMARY.md  PROJECT_HANDOVER.md  Phase_3_5_Implementation_Summary.md  QUICK_START.md  README.md  REPAIR9_COMPLETION_SUMMARY.md  RESEARCH_SUCCESS_PROCESS_AND_HOOKS_DOCUMENTATION.md  SOLUTION_SUMMARY.md  STARTUP_CHECKS_SUMMARY.md  TESTING_AUTONOMOUS_REPORT.md  (+91 more)
.claude/: settings.json  settings.local.json
.claude/commands/: update-doc.md
.claude/hooks/: ensure_session_metrics.py  organize_workflow_files.py  validate_content_cleaner.py  validate_project_context.py  validate_session_id.py
.serena/: project.yml
.serena/memories/: development_practices.md  project_overview.md  suggested_commands.md
Arize Implementation/: ArizeReview.md
KEVIN/FINAL PROJECT DOCS/: Intelligent_Search_System_Technical_Documentation.md  Report_Generation_and_Editorial_Review_Technical_Documentation.md  document_creation_workflow_analysis.md  log_summaries.md  mvpeval1.md  orchestrator_evaluation.md  (+1 more)
agents/: comprehensive_research_agent.py
claude-agents-sdk/: main.py  pyproject.toml
final_reports/: final_report_US_military_movements_to_Venezuela_region_after_bo_e6e16841_20251004_215311.md
integration/: TESTING_GUIDELINES.md  agent_session_manager.py  comprehensive_test_suite.py  end_to_end_workflow_test.py  error_handling_integration.py  error_scenario_tests.py  integration_tests.py  kevin_directory_integration.py  mcp_tool_integration.py  performance_tests.py  quality_assurance_integration.py  query_processor.py  research_orchestrator.py  run_all_tests.py  simple_e2e_test.py  simple_performance_tests.py  system_readiness_assessment.md  system_validation.py  test_error_handling_integration.py  test_quality_assurance_integration_simple.py
legacy_hooks/: README.md  __init__.py  agent_hooks.py  monitoring_hooks.py  workflow_hooks.py
multi_agent_research_system/: 1-measles_spreading_us_draft_report.md  2-measles_editorial_feedback.md  4-Final_Summary_Multi-Agent_Research_Session_737a4a35.md  4-Final_Summary_Multi-Agent_Research_Session_beddd47f-66c0-4fdc-a395-c5ba5f3da71f.md  4-Final_Summary_Multi-Agent_Research_Session_f1ece4c7.md  4-Final_Summary_Multi-Agent_Research_Session_on_Measles_Spreading_in_the_US.md  4-Final_Summary_Multi-Agent_Research_Session_on_Measles_Spreading_in_the_US_Session_6ed17d59.md  API_SETUP_COMPLETE.md  CLAUDE.md  ENHANCED_SEARCH_MCP_IMPLEMENTATION.md  GLM-4.6_LLM_Release_Report.md  GLM_4_6_Research_Report.md  GLM_4_6_Search_Verification.md  MASTERTESTWORKLIST.md  PERFORMANCE_ANALYSIS_REPORT.md  PROJECT_MEMORY.md  README.md  SETUP_GUIDE.md  STAGE1_OPTIMIZATION_IMPLEMENTATION.md  SYSTEM_SUMMARY.md  __init__.py  charlie_kirk_comprehensive_november_2024_report.md  charlie_kirk_latest_news_report.md  example_usage.py  main.py  monitoring_integration.py  requirements.txt  research_report_test_topic.md  run_research.py  start_ui.py  test_advanced_scraping_tools.py  test_agent_logging.py  test_api_integration.py  test_core_intelligence.py  test_enhanced_search_mcp.py  test_enhanced_search_utils.py  test_intelligent_research_direct.py  test_intelligent_research_system.py  test_intelligent_utilities.py  test_log_analysis.py  (+6 more)
project_docs/: asynceval1.md
reports/: Appendix-Report_Generation_Summary_US_Government_Shutdown_Research_Session.md
simple_e2e_results/: simple_e2e_results_20251014_091732.json  simple_e2e_results_20251014_091754.json
tests/: test_output_validator.py  test_output_validator_standalone.py  test_tool_execution_tracker.py
validation_results/: system_validation_20251014_091052.json  system_validation_20251014_091157.json
(+307 files in other folders)
